--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
                         <p class="lead mb-0">
                            Kathmandu, Nepal
                             <br />
-                            Anamnagar
+                            Kapan, Budhanilkantha
                         </p>
                     </div>
                     <!-- Footer Social Icons-->
