--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <header class="masthead bg-primary text-white text-center">
             <div class="container d-flex align-items-center flex-column">
                 <!-- Masthead Avatar Image-->
-                <img class="masthead-avatar mb-5" src="image.png" style="background-size: cover; height: 300px; width: 400px; border-radius: 50%;" alt="" />
+                <img class="masthead-avatar mb-5" src="image.png" style="background-size: cover; height: 300px; width: 400px; border-radius: 50px;" alt="" />
                 <!-- Masthead Heading-->
                 <h1 class="masthead-heading text-uppercase mb-0">Aakash Dhakal</h1>
                 <!-- Icon Divider-->
