Changes made again

--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html>
   <head>
     <title>My Blog</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
+    <script src="js/scripts.js"></script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7496074783650926"
+     crossorigin="anonymous"></script>
   </head>
   <body>
     <header>
