--- a/index.html
+++ b/index.html
@@ -2,22 +2,25 @@
 <html>
   <head>
     <title>My Blog</title>
-    <link rel="stylesheet" href="css/styles.css">
-    <script src="js/scripts.js"></script>
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7496074783650926"
+      <link rel="stylesheet" href="styles.css">
+      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/font-awesome@4.7.0/css/font-awesome.min.css">
+      <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7496074783650926"
      crossorigin="anonymous"></script>
   </head>
   <body>
     <header>
-      <h1>My Blog</h1>
       <nav>
-        <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">About</a></li>
-          <li><a href="#">Contact</a></li>
-        </ul>
+          <div class="logo">
+              <a href="index.html">My Blog</a>
+          </div>
+          <ul class="menu">
+              <li><a href="index.html"><i class="fa fa-home"></i> Home</a></li>
+              <li><a href="about.html"><i class="fa fa-info-circle"></i> About</a></li>
+              <li><a href="blog.html"><i class="fa fa-pencil-square-o"></i> Blog</a></li>
+              <li><a href="contact.html"><i class="fa fa-envelope"></i> Contact</a></li>
+          </ul>
       </nav>
-    </header>
+  </header>
     <main>
       <section class="blog">
         <h2>My First Blog Post</h2>
