Change made in index

--- a/index.html
+++ b/index.html
@@ -1,42 +1,51 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>My Blog</title>
-      <link rel="stylesheet" href="css/styles.css">
-      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/font-awesome@4.7.0/css/font-awesome.min.css">
-      <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7496074783650926"
-     crossorigin="anonymous"></script>
-     <script src="js/scripts.js"></script>
-  </head>
-  <body>
-    <header>
-      <nav>
-          <div class="logo">
-              <a href="index.html">My Blog</a>
-          </div>
-          <ul class="menu">
-              <li><a href="index.html"><i class="fa fa-home"></i> Home</a></li>
-              <li><a href="about.html"><i class="fa fa-info-circle"></i> About</a></li>
-              <li><a href="blog.html"><i class="fa fa-pencil-square-o"></i> Blog</a></li>
-              <li><a href="contact.html"><i class="fa fa-envelope"></i> Contact</a></li>
-          </ul>
-      </nav>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Technology Blog</title>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/font-awesome@4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="styles.css">
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7496074783650926"
+  crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.3/dist/umd/popper.min.js"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+</head>
+<body>
+
+  <!-- Header -->
+  <header>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <a class="navbar-brand" href="index.html">TechBlog</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="index.html"><i class="fa fa-home"></i> Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="about.html"><i class="fa fa-info-circle"></i> About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="blog.html"><i class="fa fa-pencil-square-o"></i> Blog</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="contact.html"><i class="fa fa-envelope"></i> Contact</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
   </header>
-    <main>
-      <section class="blog">
-        <h2>My First Blog Post</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed euismod, lorem vel bibendum bibendum, velit sapien ultrices sapien, vel molestie velit quam vel nisl. Sed euismod, lorem vel bibendum bibendum, velit sapien ultrices sapien, vel molestie velit quam vel nisl.</p>
-        <a href="#">Read More</a>
-      </section>
-      <section class="blog">
-        <h2>My Second Blog Post</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed euismod, lorem vel bibendum bibendum, velit sapien ultrices sapien, vel molestie velit quam vel nisl. Sed euismod, lorem vel bibendum bibendum, velit sapien ultrices sapien, vel molestie velit quam vel nisl.</p>
-        <a href="#">Read More</a>
-      </section>
-    </main>
-    <footer>
-      <p>&copy; 2023 My Blog</p>
-    </footer>
-    <script src="script.js"></script>
-  </body>
+
+  <!-- Rest of your webpage content goes here -->
+  
+  <footer>
+    <!-- Footer content goes here -->
+  </footer>
+
+</body>
 </html>
