--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="index.html"><i class="fa fa-home"></i> Home</a>
+            <a class="nav-link" href="index.html"><i class="fa fa-home"></i> Latest</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="about.html"><i class="fa fa-info-circle"></i> About</a>
