--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
   <!-- Header -->
   <header>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-#8ECAE6">
+    <nav class="navbar navbar-expand-lg ">
       <a class="navbar-brand" href="index.html">TechBlog</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
