--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       </ul> 
       </nav>
     </div> 
-    <section class="hero-section reveal fade-bottom">
+    <section class="hero-section">
       <div class="hero-section-container">
       <legend class="hero-section-legend">Fullstack Developer</legend>
       <h1 class="hero-section-h1">Hi, I'm Aakash</h1>
@@ -123,7 +123,7 @@
     </div>
     </section>
     <section class="contact-us reveal fade-bottom" style="margin-top: 3rem;" >
-      <form method ="post" action="/action_page.php" style="background-color: #ff004f; display: grid; place-items: center; padding: 2rem;">
+      <form class="form" method ="post" action="/action_page.php">
           <fieldset style="border: 2px solid #F8F9FA; padding: 2rem;">
           <legend style="color:#F8F9FA; font-weight: 900; font-size: 1.5rem; margin-left: 2rem; padding: 1rem;">Contact Me</legend>
           <div class="form-section">
