--- a/index.html
+++ b/index.html
@@ -17,7 +17,13 @@
       D</h1>
       <ul class="navigation-nav-ul">
         <a href="">
+          <i class='bx bxl-github' style="font-size: 1.8rem; color: #0F4C5C;">
+          
+          </i>
+          </a>
+        <a href="">
           <i class='bx bxl-twitter' style="font-size: 1.8rem;color: #0F4C5C">
+          
           </i>
         </a>
         <a href="">
@@ -50,7 +56,7 @@
       <div class="about-me-right">
         <h1 class="about-me-right-h1">About Me</h1>
         <p class="about-me-right-p">
-        I have beginner level skills in both front-end and back-end technologies, allowing me to create seamless, end-to-end solutions that delight users. From responsive and engaging user interfaces using HTML, CSS, and JavaScript to powerful server-side logic with languages like Python, Node.js, or Java, I'm well-versed in the tools needed to make it happen.
+        I have beginner level skills in both front-end and back-end technologies, allowing me to create seamless, end-to-end solutions that delight users. From responsive and engaging user interfaces using HTML, CSS, and JavaScript to powerful server-side logic with languages like Node.js, Java I'm well-versed in the tools needed to make it happen.
         </p>
         <div class="about-me-tab-panel">
           <nav class="about-me-tab-panel-nav">
@@ -61,29 +67,131 @@
           </nav>
           <div id="skills" class="tabcontent">
             <div class="tabcontent-content">
-            <h2>Frontend Development</h2>
-            <span>Building Scalable Applications using HTML,CSS,Javascript and library such as Tailwind,Reactjs,Typescript</span>
+            <div class="skills-div">
+            <p class="skills-icon"><i class='bx bxl-html5'></i></p>
+            <span>HTML</span>
             </div>
-            <div class="tabcontent-content">
-            <h2>Backend Development</h2>
-            <span>Building Scalable Applications using Nodejs, Java and libraries such as Springboot,Express</span>
+            <div class="skills-div">
+            <p class="skills-icon"><i class='bx bxl-css3'></i></p>
+            <span>CSS</span>  
             </div>
-            <div class="tabcontent-content">
-            <h2>SQL Optimization</h2>
-            <span>Building Relational Database using MYSQL,SQLite</span>
+            <div class="skills-div">
+            <p class="skills-icon"><i class='bx bxl-javascript'></i></p>
+            <span>Javascript</span>  
             </div>
+            <div class="skills-div">
+            <p class="skills-icon"><i class='bx bxl-tailwind-css'></i></p>
+            <span>Tailwind</span>
+            </div>
+            <div class="skills-div">
+            <p class="skills-icon"><i class='bx bxl-react'></i></p>
+            <span>React</span>
+            </div>
+            <div class="skills-div">
+            <p class="skills-icon"><i class='bx bxl-nodejs'></i></p>
+            <span>Nodejs</span>
+            </div>
+            <div class="skills-div">
+            <p class="skills-icon"><i class='bx bxl-java'></i></p>
+            <span>Java</span>
+            </div>
+            <div class="skills-div">
+            <p class="skills-icon"><i class='bx bxl-postgresql' ></i></p>
+            <span>PostgreSQL</span>
+            </div>
+            <div class="skills-div">
+            <p class="skills-icon"><i class='bx bxl-typescript'></i></p>
+            <span>Typescript</span>  
+            </div>
+          </div>
           </div>
           <div id="experience" class="tabcontent">
-            <h2>Frontend Skills Development</h2>
-            <span>Building Scalable Applications using HTML,CSS,Javascript</span>
+          <ul class="tabcontent-experience">
+          <li style="margin-left: 2rem;"><strong>4 Years</strong> for HTML,CSS and Javascript and 2 years for ReactJS</li>
+          <li style="margin-left: 2rem;"><strong>Few Months </strong> for Nodejs, SQL, Typescript, TailwindCSS </li>
+          <li style="margin-left: 2rem;"><strong>Using Version Control Tool such as Github</strong> since few years</li>
+          </ul>
           </div>
-          <div id="education" class="tabcontent">
-            <h2>Frontend Education Development</h2>
-            <span>Building Scalable Applications using HTML,CSS,Javascript</span>
-          </div>
+        <div id="education" class="tabcontent">
+        <div class="tabcontent-education">
+          <h4 style="text-decoration: underline;">University Degree</h4>  
+          <h5>Tribhuvan University, Bachelors of Computer Application</h5>
+          <h5>Texas International College (7th Semester)</h5>
+        </div>
+        <div class="tabcontent-education">
+          <h4 style="text-decoration: underline;">Higher Secondary School</h4>  
+          <h5>National Examination Board, Science</h5>
+          <h5>Liverpool International College</h5>
+        </div>
+        </div>
           <div id="certifications" class="tabcontent">
-            <h2>Frontend Certifications Development</h2>
-            <span>Building Scalable Applications using HTML,CSS,Javascript</span>
+            <div class="tabcontent-certifications">
+            <h3>Meta Basic and Advanced React, Coursera Online Learning Platform</h3>
+            <ul style="width: fit-content;">
+            <li>Acquired knowledge for web application development and optimization using React Hooks, React Architecture, Form Validation using Formik and Yup, Code Splitting</li>
+            <li>Learnt UI Library and React Testing Library
+            </li>
+            <li>
+            Solved Practical Coding Assessment and Quiz
+            </li>
+            <div class="tabcontent-certificates">
+            <p><i class='bx bx-link-alt'></i></p>
+            <a href="https://www.coursera.org/account/accomplishments/verify/LE8HLNLAH5ZU" target="_blank">
+            React Basics
+            </a> 
+            <a href="https://www.coursera.org/account/accomplishments/verify/6QJB29SBZHSL" target="_blank">
+            Advanced React
+            </a>
+            </div>
+            </h5>
+            </ul>
+            </div>
+            <div class="tabcontent-certifications">
+            <h3>Java Programming, Coursera Online Learning Platform
+            </h3>
+            <ul  style="width: fit-content;">
+            <li>Acquired knowledge on Object Oriented Programming, Data Structures and Algorithm, Problem Solving, File Handling, Core Java
+            </li>
+            <li>
+            Learnt about Loops, Scanner, Packages, Libraries
+            </li>
+            <li>Solved Practical Coding Assessment and Quiz
+            </li>
+            <div class="tabcontent-certificates">
+            <p><i class='bx bx-link-alt'></i></p>
+            <a href="https://www.coursera.org/account/accomplishments/verify/KTHMUBHYE53Z" target="_blank">
+            Java Programming: Arrays, Lists, and Structured Data
+            </a> 
+            <a href="https://www.coursera.org/account/accomplishments/verify/HABLMTLD4Y86" target="_blank">
+            Java Programming: Solving Problems with Software
+            </a> 
+            <a href="https://www.coursera.org/account/accomplishments/verify/5MREZJFUPBSB" target="_blank">
+            Programming Foundations with JavaScript, HTML and CSS
+            </a>
+            </div>
+            </ul>
+            </div>
+            <div class="tabcontent-certifications">
+            <h3>SQL, Coursera Online Learning Platform
+            </h3>
+            <ul  style="width: fit-content;">
+            <li>
+            Acquired knowledge on SQL Structure, SQL Database Queries and Relational Databases
+            </li>
+            <li>
+            Learnt concept on Database Management, Database Manipulation, Data Retrieval
+            </li>
+            <li>
+            Solved Practical Coding Assessment and Quiz
+            </li>
+            <div class="tabcontent-certificates">
+            <p><i class='bx bx-link-alt'></i></p>
+            <a  href="https://www.coursera.org/account/accomplishments/verify/HGM6E8TT3VSS">
+            SQL for Data Science
+            </a>
+          </div>  
+          </ul>
+            </div>
           </div>
         </div>
       </div>
@@ -93,31 +201,31 @@
     <h1 style="font-size: 2.5rem; font-weight: 900; margin-left: 3.5rem">My Services</h1>
     <div class="services-col">
     <div class="services-col-sub">
-    <p style="font-size: 3rem;">
+    <p>
     <i class='bx bx-code-alt'></i>
     </p>
-    <h3 style="font-size: 1.5rem; font-weight: 700;">Web Development</h3>
+    <h3>Web Development</h3>
     <h5 style="text-align: justify;">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laboriosam quae ratione molestias eligendi cum! In error perspiciatis itaque mollitia quos placeat ut, nesciunt excepturi aperiam quasi, id, maiores architecto consectetur.</h5>
     </div>
     <div class="services-col-sub">
-    <p style="font-size: 3rem;">
+    <p>
     <i class='bx bx-code-alt'></i>
     </p>
-    <h3 style="font-size: 1.5rem; font-weight: 700;">Backend Technology</h3>
+    <h3>Backend Technology</h3>
     <h5 style="text-align: justify;">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laboriosam quae ratione molestias eligendi cum! In error perspiciatis itaque mollitia quos placeat ut, nesciunt excepturi aperiam quasi, id, maiores architecto consectetur.</h5>
     </div>
     <div class="services-col-sub">
-    <p style="font-size: 3rem;">
+    <p>
     <i class='bx bx-code-alt'></i>
     </p>
-    <h3 style="font-size: 1.5rem; font-weight: 700;">Fullstack Project</h3>
+    <h3>Fullstack Project</h3>
     <h5 style="text-align: justify;">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laboriosam quae ratione molestias eligendi cum! In error perspiciatis itaque mollitia quos placeat ut, nesciunt excepturi aperiam quasi, id, maiores architecto consectetur.</h5>
     </div>
     <div class="services-col-sub">
-    <p style="font-size: 3rem;">
+    <p>
     <i class='bx bx-code-alt'></i>
     </p>
-    <h3 style="font-size: 1.5rem; font-weight: 700;">Web Deployment</h3>
+    <h3>Web Deployment</h3>
     <h5 style="text-align: justify;">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laboriosam quae ratione molestias eligendi cum! In error perspiciatis itaque mollitia quos placeat ut, nesciunt excepturi aperiam quasi, id, maiores architecto consectetur.</h5>
     </div>
     </div>
