--- a/index.html
+++ b/index.html
@@ -204,29 +204,33 @@
     <p>
     <i class='bx bx-code-alt'></i>
     </p>
-    <h3>Web Development</h3>
-    <h5 style="text-align: justify;">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laboriosam quae ratione molestias eligendi cum! In error perspiciatis itaque mollitia quos placeat ut, nesciunt excepturi aperiam quasi, id, maiores architecto consectetur.</h5>
+    <h3>Web Application</h3>
+    <h5 style="text-align: justify;">
+    Facilitate integrating both Frontend and Backend part of Web Application. Provide a full fledge code implmentation details and working of Application.
+    </h5>
     </div>
     <div class="services-col-sub">
     <p>
-    <i class='bx bx-code-alt'></i>
+      <i class='bx bxs-color'></i>
     </p>
-    <h3>Backend Technology</h3>
-    <h5 style="text-align: justify;">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laboriosam quae ratione molestias eligendi cum! In error perspiciatis itaque mollitia quos placeat ut, nesciunt excepturi aperiam quasi, id, maiores architecto consectetur.</h5>
+    <h3>Online Tutoring</h3>
+    <h5 style="text-align: justify;">Online classes to be organized for web application development tools such as HTML , CSS , Javascript , React , Tailwind , Typscript , Nodejs , Java , SQL for learners with proper planning, implementation and explation of whole course. Build Real World Projects on several phases of course duration.</h5>
     </div>
     <div class="services-col-sub">
     <p>
-    <i class='bx bx-code-alt'></i>
-    </p>
+      <i class='bx bxl-product-hunt'></i>   
+     </p>
     <h3>Fullstack Project</h3>
-    <h5 style="text-align: justify;">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laboriosam quae ratione molestias eligendi cum! In error perspiciatis itaque mollitia quos placeat ut, nesciunt excepturi aperiam quasi, id, maiores architecto consectetur.</h5>
+    <h5 style="text-align: justify;">
+    Building a complete project with Client's Perspective using the libraries used in Real world such as React,Node. Implement SDLC for project flow and periodic maintainance of Project is faciliated after completion.
+    </h5>
     </div>
     <div class="services-col-sub">
     <p>
-    <i class='bx bx-code-alt'></i>
+      <i class='bx bxs-capsule'></i>    
     </p>
     <h3>Web Deployment</h3>
-    <h5 style="text-align: justify;">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laboriosam quae ratione molestias eligendi cum! In error perspiciatis itaque mollitia quos placeat ut, nesciunt excepturi aperiam quasi, id, maiores architecto consectetur.</h5>
+    <h5 style="text-align: justify;">Deploy the Web Application in deploying platform such as Vercel, Firebase, Netlify, Railway, Github etc. Help deploy static as well as dynamic sites and applications.</h5>
     </div>
     </div>
     </section>
@@ -265,7 +269,7 @@
     </section>
     </div>
 
-    <script>
+    <script type="text/javascript">
       function openTab(evt, tabName) {
         var i, tabcontent, tablinks;
         tabcontent = document.getElementsByClassName("tabcontent");
